<resources>
    <string name="app_name">IMAGS</string>
    <string name="welcome_title">Welcome to the IMAGS App!</string>
    <string name="welcome_text">If you are a registered participant in the study, you may log in using your personal Spotify account credentials on the following screen.
        If you are not currently officially registered with the study, you will not be able to log in or use this application.\nIf you have any questions, comments, or concerns, please tap the Help button below.</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_help">Help</string>

    <string name="help_button">Help</string>
    <string name="help_title">Help</string>
    <string name="help_message">For assistance, please contact vjmanzo@wpi.edu</string>
    <string name="help_ok">OK</string>

    <string name="login_success">Success!</string>
    <string name="login_bad">Whoops...</string>
    <string name="login_success_text">You have successfully logged in. Tap the button below to continue.</string>
    <string name="login_bad_text">You do not appear to be registered to participate in this study. Please contact an administrator for assistance.</string>
    <string name="continue_button">Continue</string>

    <string name="presession_title">Before We Begin this Session...</string>
    <string name="presession_text">During the duration of the sessionData, we ask you to keep track of the intensity of the pain you are experiencing moment-to-moment. \nTo do so, simply manipulate the slider on the right by moving the circle up or down. The higher you move the circle, the worse the pain you are experiencing is.
        When you are ready, set the slider according to how you feel right now. Then, press the &quot;Continue&quot; button below to continue.</string>

    <string name="search_title">Search for Music</string>
    <string name="uriInput">Input Uri</string>
    <string name="albumField">Album:</string>
    <string name="trackField">Track:</string>
    <string name="artistField">Artist:</string>
    <string name="searchBut">Search</string>

    <string name="session_title">Session in Progress</string>
    <string name="currently_playing">Currently Playing:</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="finish_button">Finish Session</string>
    <string name="new_song">New Song</string>

    <string name="medication_title">Lastly...</string>
    <string name="medication_text1">Did you take a dose of your prescribed medication?</string>
    <string name="medication_text2">What is the name of that medication?</string>
    <string name="medication_text3">What was the dosage you took?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="submit_button">Submit</string>


    <string name="postsession_title">Thank You!</string>
    <string name="postsession_text">That concludes this session.\nPlease tap the button below to logout.</string>
    <string name="logout_button">Logout</string>

    <string name="cover_art_description">Cover art</string>
</resources>
