<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jtkaiser.imags.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/search_title"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/trackField"/>

        <EditText
            android:id="@+id/trackInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/artistField"/>

        <EditText
            android:id="@+id/artistInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/albumField"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/albumInput"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="URI:"/>

        <EditText
            android:id="@+id/uri_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/uriInput"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchBut"
            android:id="@+id/seachButton"/>
        
    </LinearLayout>
        
        
</android.support.constraint.ConstraintLayout>
