<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jtkaiser.imags.PresessionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/presession_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/presession_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/presession_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_button"/>

            <Button
                android:id="@+id/presession_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_button"/>
        </LinearLayout>
        
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
