<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jtkaiser.imags.SessionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_playing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/track_title"/>

        <Button
            android:id="@+id/session_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="141dp">

            <Button
                android:id="@+id/play_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/login_help"
                android:layout_alignBottom="@+id/login_help"
                android:layout_centerHorizontal="true"
                android:text="@string/play_button" />

            <Button
                android:id="@+id/login_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/help_button" />
        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
